--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             style="display: flex; width: 300px; height: 100px; justify-content: space-between; flex-direction: column;">
             <input id="login" placeholder="Login" onchange="preencherLogin(event)">
             <input id="senha" placeholder="Senha" type="password" onchange="preencherSenha(event)">
-            <input id="api-key" placeholder="Api Key" onchange="preencherApi()">
+            <input id="api-key" placeholder="Api Key" type="password" onchange="preencherApi()">
             <button id="login-button" disabled>Login</button>
         </div>
         <div id="search-container" style="margin-left: 20px">
